<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/task_editing_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/task_editor_appbar"

        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <include layout="@layout/toolbar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/show_info_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_anchorGravity="center">

        <MultiAutoCompleteTextView
            android:id="@+id/task_title_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/title"
            android:autofillHints="@string/title"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp"
            android:defaultFocusHighlightEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/desc_text_info"
            app:layout_constraintTop_toBottomOf="@+id/desc_text_info">

            <MultiAutoCompleteTextView
                android:id="@+id/task_description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/description"
                android:textColor="@color/colorTextSecondary"
                android:textSize="14sp" />
        </ScrollView>


        <TextView
            android:id="@+id/desc_text_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/description_with_colon"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/colorTextPrimary"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/task_title_edit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>